// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Textarea Component should match snapshot with error 1`] = `
<div>
  <div>
    <label
      for="description"
    >
      Description
    </label>
    <textarea
      aria-describedby="description-error"
      aria-invalid="true"
      name="description"
    />
  </div>
  <span>
    Error message
  </span>
</div>
`;

exports[`Textarea Component should match snapshot without error 1`] = `
<div>
  <div>
    <label
      for="description"
    >
      Description
    </label>
    <textarea
      aria-invalid="false"
      name="description"
    >
      Test content
    </textarea>
  </div>
</div>
`;
